src/test/deca/context/valid/decl_method_with_nameclass.deca
class A {
int A(int x){
return x*x;
}
}