src/test/deca/context/invalid/double_decl_method_diff_type.deca
class A {

int equals(Object o){
}

}